# DCF-Builder

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  mkdocs.yml  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
DCF_builder/: index.html  package-lock.json  package.json
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: CashflowChart.tsx  CashflowEditor.tsx  EngineBadge.tsx  ForecastTable.tsx  MetricCard.tsx  NumberField.tsx  SectionCard.tsx  SensitivityTable.tsx  StreamConsole.tsx
apps/web/src/features/builder/: AnalyticsPanel.tsx  BuilderHeader.tsx  ControlPanel.tsx
apps/web/src/hooks/: useBuilderState.ts  useValuationEngine.ts
apps/web/src/lib/: calculators.test.ts  calculators.ts  csv.test.ts  csv.ts  dataProviders.ts  finance.ts  model.ts  sensitivity.ts
apps/web/src/types/: parquet-wasm.d.ts
crates/dcf/: Cargo.toml
crates/dcf/src/: lib.rs
docs/: getting-started.md  governance.md  index.md  valuation-engine.md
scripts/: test-watchdog.mjs
tests/python/: test_placeholder.py
