[tool.poetry]
name = "dcf-builder-tooling"
version = "0.1.0"
description = "Auxiliary tooling for DCF Builder"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.5.7"
mypy = "^1.11.0"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests/python"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
